opam-version: "1.2"
version: "0.0"
maintainer: "kkdstryker@gmail.com"
authors: ["Robert Toth"]
homepage: "https://github.com/StrykerKKD/SandDB"
bug-reports: "https://github.com/StrykerKKD/SandDB/issues"
dev-repo: "https://github.com/StrykerKKD/SandDB"
license: "MIT"
build: [
  ["jbuilder" "build" "--only" "sanddb" "--root" "." "-j" jobs "@install"]
]
depends: [
    "atdgen" {= "1.12.0"}
    "lwt" {= "3.3.0"}
]
