opam-version: "1.2"
version: "0.1"
maintainer: "kkdstryker@gmail.com"
authors: ["Robert Toth"]
homepage: "https://github.com/StrykerKKD/SandDB"
bug-reports: "https://github.com/StrykerKKD/SandDB/issues"
dev-repo: "https://github.com/StrykerKKD/SandDB"
license: "MIT"
build: [
  ["jbuilder" "build" "--only" "sanddb" "--root" "." "-j" jobs "@install"]
]
depends: [
  "jbuilder" {build}
  "atdgen" {>= "1.12.0"}
  "lwt" {>= "3.3.0"}
  "uuidm" {>= "0.9.6"}
  "base" {>= "v0.11.0"}
]
available: [ocaml-version >= "4.03.0"]