opam-version: "2.0"
name: "sanddb"
version: "0.1"
maintainer: "Robert Toth <kkdstryker@gmail.com>"
authors: ["Robert Toth"]
homepage: "https://github.com/StrykerKKD/SandDB"
bug-reports: "https://github.com/StrykerKKD/SandDB/issues"
dev-repo: "git+https://github.com/StrykerKKD/SandDB.git"
license: "MIT"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "build" "@doc" "-p" name] {with-doc}
]
run-test: [
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "dune" {build}
  "atdgen" {>= "1.12.0"}
  "lwt" {>= "3.3.0"}
  "uuidm" {>= "0.9.6"}
  "base" {>= "v0.11.0"}
  "alcotest" {with-test}
  "odoc" {with-doc}
  "ocaml" {>= "4.04.2"}
]